Closed
Bug 1377373
Opened 8 years ago
Closed 8 years ago
Compiling on Linux gives "nsXPCOMStrings.h: No such file or directory" error
Categories
(Instantbird Graveyard :: Other, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: qheaden, Assigned: qheaden)
References
Details
Attachments
(1 file)
|
636 bytes,
patch
|
florian
:
review+
|
Details | Diff | Splinter Review |
When compiling Instantbird on Linux (I cannot be sure about the other platforms), the following error causes compilation to fail:
/comm-central/im/components/mintrayr/trayToolkit.h:21:28: fatal error: nsXPCOMStrings.h: No such file or directory
| Assignee | ||
Updated•8 years ago
|
Assignee: nobody → qheaden
Status: NEW → ASSIGNED
| Assignee | ||
Comment 1•8 years ago
|
||
This patch fixes the compilation issue by simply removing the nsXPCOMStrings.h include. There doesn't seem to be any ill effects from doing this and Instantbird builds and runs well.
Attachment #8882490 -
Flags: review?(florian)
Attachment #8882490 -
Flags: review?(clokep)
Comment 2•8 years ago
|
||
Comment on attachment 8882490 [details] [diff] [review]
bug-1377373-v1.patch
Review of attachment 8882490 [details] [diff] [review]:
-----------------------------------------------------------------
Thanks for the patch! I haven't tried this myself, but comment 1 says you have :-).
Attachment #8882490 -
Flags: review?(florian)
Attachment #8882490 -
Flags: review?(clokep)
Attachment #8882490 -
Flags: review+
Pushed by clokep@gmail.com:
https://hg.mozilla.org/comm-central/rev/3e3a3b2bdf47
Fix mintrayr compilation error message. r=florian
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Comment 4•8 years ago
|
||
Fixed in 56.
You need to log in
before you can comment on or make changes to this bug.
Description
•