Bug 1377373 - Fix mintrayr compilation error message. r=florian

--HG--
extra : amend_source : c84c5f7430b9858e567d76dddd87e8978fbeb8e8